.antlr/MATParser.java
// Generated from c:\Users\windows\Desktop\COMPILER\antlrtest\MAT.g4 by ANTLR 4.9.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class MATParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, CHANNEL=23, ID=24, NUMBER=25, 
		FLOATNUMBER=26, WS=27, LINE_COMMENT=28, COMMENT=29;
	public static final int
		RULE_start = 0, RULE_defs = 1, RULE_defpinmaps = 2, RULE_defpingroups = 3, 
		RULE_deftimeset = 4, RULE_defvoltagelevels = 5, RULE_deffunc = 6, RULE_labeled_statement = 7, 
		RULE_stmt = 8, RULE_stmttimeset = 9, RULE_stmtset = 10, RULE_stmtread = 11, 
		RULE_stmtinc = 12, RULE_stmtdec = 13, RULE_stmtgoto = 14, RULE_stmtcall = 15, 
		RULE_stmtrepeat = 16, RULE_stmtloop = 17, RULE_stmtif = 18, RULE_stmtelse = 19, 
		RULE_map = 20, RULE_pingroup = 21, RULE_timeset = 22, RULE_voltagelevel = 23, 
		RULE_setexp = 24, RULE_readexp = 25;
	private static String[] makeRuleNames() {
		return new String[] {
			"start", "defs", "defpinmaps", "defpingroups", "deftimeset", "defvoltagelevels", 
			"deffunc", "labeled_statement", "stmt", "stmttimeset", "stmtset", "stmtread", 
			"stmtinc", "stmtdec", "stmtgoto", "stmtcall", "stmtrepeat", "stmtloop", 
			"stmtif", "stmtelse", "map", "pingroup", "timeset", "voltagelevel", "setexp", 
			"readexp"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'pinmaps'", "'{'", "','", "'}'", "'pingroups'", "';'", "'timeset'", 
			"'voltagelevels'", "'def'", "'()'", "':'", "'set'", "'read'", "'inc'", 
			"'dec'", "'goto'", "'repeat'", "'loop'", "'if'", "'else'", "'s'", "'='"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, "CHANNEL", 
			"ID", "NUMBER", "FLOATNUMBER", "WS", "LINE_COMMENT", "COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "MAT.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public MATParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class StartContext extends ParserRuleContext {
		public List<DefsContext> defs() {
			return getRuleContexts(DefsContext.class);
		}
		public DefsContext defs(int i) {
			return getRuleContext(DefsContext.class,i);
		}
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(53); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(52);
				defs();
				}
				}
				setState(55); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__4) | (1L << T__6) | (1L << T__7) | (1L << T__8))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DefsContext extends ParserRuleContext {
		public DefpinmapsContext defpinmaps() {
			return getRuleContext(DefpinmapsContext.class,0);
		}
		public DefpingroupsContext defpingroups() {
			return getRuleContext(DefpingroupsContext.class,0);
		}
		public DeffuncContext deffunc() {
			return getRuleContext(DeffuncContext.class,0);
		}
		public DeftimesetContext deftimeset() {
			return getRuleContext(DeftimesetContext.class,0);
		}
		public DefvoltagelevelsContext defvoltagelevels() {
			return getRuleContext(DefvoltagelevelsContext.class,0);
		}
		public DefsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_defs; }
	}

	public final DefsContext defs() throws RecognitionException {
		DefsContext _localctx = new DefsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_defs);
		try {
			setState(62);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__0:
				enterOuterAlt(_localctx, 1);
				{
				setState(57);
				defpinmaps();
				}
				break;
			case T__4:
				enterOuterAlt(_localctx, 2);
				{
				setState(58);
				defpingroups();
				}
				break;
			case T__8:
				enterOuterAlt(_localctx, 3);
				{
				setState(59);
				deffunc();
				}
				break;
			case T__6:
				enterOuterAlt(_localctx, 4);
				{
				setState(60);
				deftimeset();
				}
				break;
			case T__7:
				enterOuterAlt(_localctx, 5);
				{
				setState(61);
				defvoltagelevels();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DefpinmapsContext extends ParserRuleContext {
		public List<MapContext> map() {
			return getRuleContexts(MapContext.class);
		}
		public MapContext map(int i) {
			return getRuleContext(MapContext.class,i);
		}
		public DefpinmapsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_defpinmaps; }
	}

	public final DefpinmapsContext defpinmaps() throws RecognitionException {
		DefpinmapsContext _localctx = new DefpinmapsContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_defpinmaps);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(64);
			match(T__0);
			setState(65);
			match(T__1);
			setState(66);
			map();
			setState(71);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__2) {
				{
				{
				setState(67);
				match(T__2);
				setState(68);
				map();
				}
				}
				setState(73);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(74);
			match(T__3);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DefpingroupsContext extends ParserRuleContext {
		public List<PingroupContext> pingroup() {
			return getRuleContexts(PingroupContext.class);
		}
		public PingroupContext pingroup(int i) {
			return getRuleContext(PingroupContext.class,i);
		}
		public DefpingroupsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_defpingroups; }
	}

	public final DefpingroupsContext defpingroups() throws RecognitionException {
		DefpingroupsContext _localctx = new DefpingroupsContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_defpingroups);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(76);
			match(T__4);
			setState(77);
			match(T__1);
			setState(78);
			pingroup();
			setState(83);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__5) {
				{
				{
				setState(79);
				match(T__5);
				setState(80);
				pingroup();
				}
				}
				setState(85);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(86);
			match(T__3);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeftimesetContext extends ParserRuleContext {
		public List<TimesetContext> timeset() {
			return getRuleContexts(TimesetContext.class);
		}
		public TimesetContext timeset(int i) {
			return getRuleContext(TimesetContext.class,i);
		}
		public DeftimesetContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_deftimeset; }
	}

	public final DeftimesetContext deftimeset() throws RecognitionException {
		DeftimesetContext _localctx = new DeftimesetContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_deftimeset);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(88);
			match(T__6);
			setState(89);
			match(T__1);
			setState(90);
			timeset();
			setState(95);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__5) {
				{
				{
				setState(91);
				match(T__5);
				setState(92);
				timeset();
				}
				}
				setState(97);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(98);
			match(T__3);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DefvoltagelevelsContext extends ParserRuleContext {
		public List<VoltagelevelContext> voltagelevel() {
			return getRuleContexts(VoltagelevelContext.class);
		}
		public VoltagelevelContext voltagelevel(int i) {
			return getRuleContext(VoltagelevelContext.class,i);
		}
		public DefvoltagelevelsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_defvoltagelevels; }
	}

	public final DefvoltagelevelsContext defvoltagelevels() throws RecognitionException {
		DefvoltagelevelsContext _localctx = new DefvoltagelevelsContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_defvoltagelevels);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(100);
			match(T__7);
			setState(101);
			match(T__1);
			setState(102);
			voltagelevel();
			setState(107);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__5) {
				{
				{
				setState(103);
				match(T__5);
				setState(104);
				voltagelevel();
				}
				}
				setState(109);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(110);
			match(T__3);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeffuncContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(MATParser.ID, 0); }
		public List<Labeled_statementContext> labeled_statement() {
			return getRuleContexts(Labeled_statementContext.class);
		}
		public Labeled_statementContext labeled_statement(int i) {
			return getRuleContext(Labeled_statementContext.class,i);
		}
		public DeffuncContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_deffunc; }
	}

	public final DeffuncContext deffunc() throws RecognitionException {
		DeffuncContext _localctx = new DeffuncContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_deffunc);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(112);
			match(T__8);
			setState(113);
			match(ID);
			setState(114);
			match(T__9);
			setState(115);
			match(T__1);
			setState(119);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__6) | (1L << T__11) | (1L << T__12) | (1L << T__13) | (1L << T__14) | (1L << T__15) | (1L << T__16) | (1L << T__17) | (1L << T__18) | (1L << ID))) != 0)) {
				{
				{
				setState(116);
				labeled_statement();
				}
				}
				setState(121);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(122);
			match(T__3);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Labeled_statementContext extends ParserRuleContext {
		public StmtContext stmt() {
			return getRuleContext(StmtContext.class,0);
		}
		public List<TerminalNode> ID() { return getTokens(MATParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(MATParser.ID, i);
		}
		public Labeled_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_labeled_statement; }
	}

	public final Labeled_statementContext labeled_statement() throws RecognitionException {
		Labeled_statementContext _localctx = new Labeled_statementContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_labeled_statement);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(128);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(124);
					match(ID);
					setState(125);
					match(T__10);
					}
					} 
				}
				setState(130);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			}
			setState(131);
			stmt();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StmtContext extends ParserRuleContext {
		public StmtsetContext stmtset() {
			return getRuleContext(StmtsetContext.class,0);
		}
		public StmtreadContext stmtread() {
			return getRuleContext(StmtreadContext.class,0);
		}
		public StmtifContext stmtif() {
			return getRuleContext(StmtifContext.class,0);
		}
		public StmtrepeatContext stmtrepeat() {
			return getRuleContext(StmtrepeatContext.class,0);
		}
		public StmtloopContext stmtloop() {
			return getRuleContext(StmtloopContext.class,0);
		}
		public StmtgotoContext stmtgoto() {
			return getRuleContext(StmtgotoContext.class,0);
		}
		public StmtcallContext stmtcall() {
			return getRuleContext(StmtcallContext.class,0);
		}
		public StmtincContext stmtinc() {
			return getRuleContext(StmtincContext.class,0);
		}
		public StmtdecContext stmtdec() {
			return getRuleContext(StmtdecContext.class,0);
		}
		public StmttimesetContext stmttimeset() {
			return getRuleContext(StmttimesetContext.class,0);
		}
		public StmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stmt; }
	}

	public final StmtContext stmt() throws RecognitionException {
		StmtContext _localctx = new StmtContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_stmt);
		try {
			setState(143);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__11:
				enterOuterAlt(_localctx, 1);
				{
				setState(133);
				stmtset();
				}
				break;
			case T__12:
				enterOuterAlt(_localctx, 2);
				{
				setState(134);
				stmtread();
				}
				break;
			case T__18:
				enterOuterAlt(_localctx, 3);
				{
				setState(135);
				stmtif();
				}
				break;
			case T__16:
				enterOuterAlt(_localctx, 4);
				{
				setState(136);
				stmtrepeat();
				}
				break;
			case T__17:
				enterOuterAlt(_localctx, 5);
				{
				setState(137);
				stmtloop();
				}
				break;
			case T__15:
				enterOuterAlt(_localctx, 6);
				{
				setState(138);
				stmtgoto();
				}
				break;
			case ID:
				enterOuterAlt(_localctx, 7);
				{
				setState(139);
				stmtcall();
				}
				break;
			case T__13:
				enterOuterAlt(_localctx, 8);
				{
				setState(140);
				stmtinc();
				}
				break;
			case T__14:
				enterOuterAlt(_localctx, 9);
				{
				setState(141);
				stmtdec();
				}
				break;
			case T__6:
				enterOuterAlt(_localctx, 10);
				{
				setState(142);
				stmttimeset();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StmttimesetContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(MATParser.ID, 0); }
		public StmttimesetContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stmttimeset; }
	}

	public final StmttimesetContext stmttimeset() throws RecognitionException {
		StmttimesetContext _localctx = new StmttimesetContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_stmttimeset);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(145);
			match(T__6);
			setState(146);
			match(ID);
			setState(147);
			match(T__5);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StmtsetContext extends ParserRuleContext {
		public List<SetexpContext> setexp() {
			return getRuleContexts(SetexpContext.class);
		}
		public SetexpContext setexp(int i) {
			return getRuleContext(SetexpContext.class,i);
		}
		public StmtsetContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stmtset; }
	}

	public final StmtsetContext stmtset() throws RecognitionException {
		StmtsetContext _localctx = new StmtsetContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_stmtset);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(149);
			match(T__11);
			setState(150);
			setexp();
			setState(155);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__2) {
				{
				{
				setState(151);
				match(T__2);
				setState(152);
				setexp();
				}
				}
				setState(157);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(158);
			match(T__5);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StmtreadContext extends ParserRuleContext {
		public List<ReadexpContext> readexp() {
			return getRuleContexts(ReadexpContext.class);
		}
		public ReadexpContext readexp(int i) {
			return getRuleContext(ReadexpContext.class,i);
		}
		public StmtreadContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stmtread; }
	}

	public final StmtreadContext stmtread() throws RecognitionException {
		StmtreadContext _localctx = new StmtreadContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_stmtread);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(160);
			match(T__12);
			setState(161);
			readexp();
			setState(166);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__2) {
				{
				{
				setState(162);
				match(T__2);
				setState(163);
				readexp();
				}
				}
				setState(168);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(169);
			match(T__5);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StmtincContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(MATParser.ID, 0); }
		public List<TerminalNode> NUMBER() { return getTokens(MATParser.NUMBER); }
		public TerminalNode NUMBER(int i) {
			return getToken(MATParser.NUMBER, i);
		}
		public StmtincContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stmtinc; }
	}

	public final StmtincContext stmtinc() throws RecognitionException {
		StmtincContext _localctx = new StmtincContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_stmtinc);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(171);
			match(T__13);
			setState(172);
			match(ID);
			setState(173);
			match(T__2);
			setState(174);
			match(NUMBER);
			setState(175);
			match(T__10);
			setState(176);
			match(NUMBER);
			setState(177);
			match(T__5);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StmtdecContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(MATParser.ID, 0); }
		public List<TerminalNode> NUMBER() { return getTokens(MATParser.NUMBER); }
		public TerminalNode NUMBER(int i) {
			return getToken(MATParser.NUMBER, i);
		}
		public StmtdecContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stmtdec; }
	}

	public final StmtdecContext stmtdec() throws RecognitionException {
		StmtdecContext _localctx = new StmtdecContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_stmtdec);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(179);
			match(T__14);
			setState(180);
			match(ID);
			setState(181);
			match(T__2);
			setState(182);
			match(NUMBER);
			setState(183);
			match(T__10);
			setState(184);
			match(NUMBER);
			setState(185);
			match(T__5);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StmtgotoContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(MATParser.ID, 0); }
		public StmtgotoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stmtgoto; }
	}

	public final StmtgotoContext stmtgoto() throws RecognitionException {
		StmtgotoContext _localctx = new StmtgotoContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_stmtgoto);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(187);
			match(T__15);
			setState(188);
			match(ID);
			setState(189);
			match(T__5);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StmtcallContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(MATParser.ID, 0); }
		public StmtcallContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stmtcall; }
	}

	public final StmtcallContext stmtcall() throws RecognitionException {
		StmtcallContext _localctx = new StmtcallContext(_ctx, getState());
		enterRule(_localctx, 30, RULE_stmtcall);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(191);
			match(ID);
			setState(192);
			match(T__9);
			setState(193);
			match(T__5);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StmtrepeatContext extends ParserRuleContext {
		public TerminalNode NUMBER() { return getToken(MATParser.NUMBER, 0); }
		public StmtsetContext stmtset() {
			return getRuleContext(StmtsetContext.class,0);
		}
		public StmtreadContext stmtread() {
			return getRuleContext(StmtreadContext.class,0);
		}
		public StmtrepeatContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stmtrepeat; }
	}

	public final StmtrepeatContext stmtrepeat() throws RecognitionException {
		StmtrepeatContext _localctx = new StmtrepeatContext(_ctx, getState());
		enterRule(_localctx, 32, RULE_stmtrepeat);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(195);
			match(T__16);
			setState(196);
			match(NUMBER);
			setState(197);
			match(T__10);
			setState(200);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__11:
				{
				setState(198);
				stmtset();
				}
				break;
			case T__12:
				{
				setState(199);
				stmtread();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StmtloopContext extends ParserRuleContext {
		public TerminalNode NUMBER() { return getToken(MATParser.NUMBER, 0); }
		public List<Labeled_statementContext> labeled_statement() {
			return getRuleContexts(Labeled_statementContext.class);
		}
		public Labeled_statementContext labeled_statement(int i) {
			return getRuleContext(Labeled_statementContext.class,i);
		}
		public StmtloopContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stmtloop; }
	}

	public final StmtloopContext stmtloop() throws RecognitionException {
		StmtloopContext _localctx = new StmtloopContext(_ctx, getState());
		enterRule(_localctx, 34, RULE_stmtloop);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(202);
			match(T__17);
			setState(203);
			match(NUMBER);
			setState(204);
			match(T__1);
			setState(208);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__6) | (1L << T__11) | (1L << T__12) | (1L << T__13) | (1L << T__14) | (1L << T__15) | (1L << T__16) | (1L << T__17) | (1L << T__18) | (1L << ID))) != 0)) {
				{
				{
				setState(205);
				labeled_statement();
				}
				}
				setState(210);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(211);
			match(T__3);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StmtifContext extends ParserRuleContext {
		public List<SetexpContext> setexp() {
			return getRuleContexts(SetexpContext.class);
		}
		public SetexpContext setexp(int i) {
			return getRuleContext(SetexpContext.class,i);
		}
		public List<Labeled_statementContext> labeled_statement() {
			return getRuleContexts(Labeled_statementContext.class);
		}
		public Labeled_statementContext labeled_statement(int i) {
			return getRuleContext(Labeled_statementContext.class,i);
		}
		public StmtelseContext stmtelse() {
			return getRuleContext(StmtelseContext.class,0);
		}
		public StmtifContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stmtif; }
	}
